tests/baselines/reference/superAccessInFatArrow1.errors.txt
superAccessInFatArrow1.ts(1,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== superAccessInFatArrow1.ts (1 errors) ====
    module test {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export class A {
            foo() {
            }
        }
        export class B extends A {
            bar(callback: () => void ) {
            }
            runme() {
                this.bar(() => {
                    super.foo();
                });
            }
        }
    }